<resources>
    <!-- ======================== 字符串 ========================= -->
    <string name="app_name">Helper</string>

    <!--drawerlayout navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--公共文字-->
    <string name="dialog_info">提示</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_confirm">确定</string>

    <!--编辑框输入文字-->
    <string name="dialog_edit_hint">请输入内容</string>

    <!--提示框的加载文字-->
    <string name="dialog_loading">正在加载</string>

    <!--登录框的默认文字-->
    <string name="dialog_login">登录</string>
    <string name="dialog_register">注册</string>
    <string name="dialog_username">手机号/邮箱</string>
    <string name="dialog_password">密码</string>
    <string name="dialog_verife_code">验证码</string>
    <string name="dialog_countdown">获取验证码</string>
    <string name="dialog_reset_countdown">获取验证码</string>
    <string name="dialog_second">秒</string>

    <!--升级对话框的默认文字-->
    <string name="dialog_up_grade">升级</string>
    <string name="dialog_upgrade_version">1.0</string>
    <string name="dialog_upgrade_size">10M</string>
    <string name="dialog_upgrade_desc">适配Android P</string>

    <!--全屏对话框右上角的操作项-->
    <string name="menu_save">保存</string>
    <string name="menu_send">发送</string>
    <string name="menu_insert">添加</string>
    <string name="menu_share">分享</string>
    <string name="menu_update">更新</string>
    <string name="menu_create">创建</string>

    <!-- ======================== 颜色 ========================= -->

    <color name="colorPrimaryText">#212121</color>
    <color name="colorSecondaryText">#757575</color>
    <color name="colorDivide">#BDBDBD</color>
    <color name="colorHintText">#e0e0e0</color>
    <color name="colorLightDivide">#f5f5f5</color>

    <color name="colorBlue">#0091ea</color>
    <color name="colorLightBlue">#500091ea</color>

    <!--带透明度的颜色-->
    <color name="colorPrimaryTranculent">#70212121</color>
</resources>
