<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size">

        <TextView
                android:id="@+id/tv_login"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_login"
                android:textSize="@dimen/title_text_size" />

        <TextView
                android:id="@+id/tv_register"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_register"
                android:textSize="@dimen/title_text_size" />
    </LinearLayout>

    <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@drawable/bg_gray_border"
            android:hint="@string/dialog_username"
            android:padding="@dimen/padding_normal" />

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@drawable/bg_gray_border"
            android:hint="@string/dialog_password"
            android:padding="@dimen/padding_normal" />

    <LinearLayout
            android:id="@+id/ll_verife"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/et_verife_code"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/bg_gray_border"
                android:hint="@string/dialog_verife_code"
                android:padding="@dimen/padding_normal" />

        <TextView
                android:id="@+id/tv_countdown"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlue"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_countdown"
                android:textColor="@android:color/white" />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/colorDivide" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_cancel"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_btn_cancel" />

        <View
                android:layout_width="@dimen/divide_line_size"
                android:layout_height="match_parent"
                android:background="@color/colorDivide" />

        <Button
                android:id="@+id/bt_confirm"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_btn_confirm" />
    </LinearLayout>
</LinearLayout>