<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/up_grade_ic_top" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">

            <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="@dimen/margin_empty"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_upgrade_version" />

            <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="@dimen/margin_empty"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/dialog_upgrade_size" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/oversized_text_size"
                android:minHeight="@dimen/oversized_small_text_size">

            <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_upgrade_desc" />
        </androidx.core.widget.NestedScrollView>

        <Button
                android:id="@+id/bt_upgrade"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_small_size"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@android:color/holo_red_light"
                android:text="@string/dialog_up_grade"
                android:textColor="@android:color/white" />

        <com.din.helper.dialog.LoadProgress
                android:id="@+id/load_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

    </LinearLayout>

    <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/up_grade_ic_cancel" />
</LinearLayout>