<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_small"
            android:text="@string/dialog_info"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/bg_gray_border"
            android:ellipsize="end"
            android:visibility="gone"
            android:inputType="text"
            android:maxLines="1" />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/colorDivide" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_negative"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_btn_cancel" />

        <View
                android:layout_width="@dimen/divide_line_size"
                android:layout_height="match_parent"
                android:background="@color/colorDivide" />

        <Button
                android:id="@+id/bt_positive"
                android:layout_width="@dimen/margin_empty"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dialog_btn_confirm" />
    </LinearLayout>
</LinearLayout>